--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Homepage</h1> 
+    <h1>OV Recipe Book</h1> 
+  <p><a href="./recipes/tacomac/tacomac.html">Taco Mac</a></p>
+   <p><a href="./recipes/springch/springchicken.html">Spring Chicken</a></p>
 </body>
 </html>
