--- a/recipes/springch/springchicken.html
+++ b/recipes/springch/springchicken.html
@@ -7,6 +7,6 @@
     <title>How to make Spring Chicken</title>
 </head>
 <body>
-    <h1>A fresh chinese inspired poultry dish </h1>
+    <h1>Recipe : Spring Chicken </h1>
 </body>
 </html>
