Added steps to recipe
Added steps to recipe that outline how you make the dish.

--- a/recipes/springch/springchicken.html
+++ b/recipes/springch/springchicken.html
@@ -8,5 +8,43 @@
 </head>
 <body>
     <h1>Recipe : Spring Chicken </h1>
+<img src="../img/schik.jpeg" alt = "jpeg of sprink chicken">
+   
+    
+<p>I came across this recipe while Unicycling 
+    with sherpas around everest, The locals beileved 
+    that chciken prepared this way seems to 
+    have energizing powers. which is why its 
+    called <em>"spring chicken"</em> </p>
+
+<h2>Ingredients You'll need</h2>
+    <ul>
+<li>1 pound of your choice of Chicken</li>
+<li>2 Jalepenos Sliced</li>
+<li>Gignger Paste</li>
+<li>2 tbsp Lemon juice</li>
+<li>5 sprigs of Green Onion</li>
+<li>Fresh Garlic</li>
+<li>Cilantro</li>
+    </ul>
+<h2> How to make</h2>
+    <ol>
+<li>First youll need to cut your ingredients. 
+    Start by slicing your chicken into strips no longer than 2 inches. 
+    This ensures even cooking times for every peice. 
+    Wash chicken then place in collinader and let drain.</li>
+<li> Next youll need to slice your veggies. 
+    Start by slicing your green onions into small peices followed by the Jalepeno and then cilantro.</li>
+<li> Combine Garlic, Ginger Paste, Pepper, Salt and your 
+    sliced veggies in a ziploc and add you tbsp of lemon juice.</li>
+<li> <strong>This part is <em>essential</em> </strong> 
+    Proceed to crush all of your ingredients in the ziploc bag unitl youre 
+    left with what resembles a paste.</li>
+<li>Add your chicken to the bag and let marinate in the fridge for at least 2 hours.</li>
+<li>Take chicken out of bag and lightly dust with corn starch.</li>
+<li>Pan fry in your choice of oil until meat is cooked through.</li> 
+<li><em> Enjoy with a side of rice. </em></li>
+    </ol>
+
 </body>
 </html>
