New Folder / Fixed typos
Ran into some trouble with git and lost a couple files. ended up re-cloning into another directory. Fixed typos in the springchicken.html file and also updated images.

--- a/recipes/springch/springchicken.html
+++ b/recipes/springch/springchicken.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1>Recipe : Spring Chicken </h1>
-<img src="../img/schik.jpeg" alt = "jpeg of sprink chicken">
+<img src="../img/sc.jpeg" alt = "jpeg of sprink chicken">
    
     
 <p>I came across this recipe while Unicycling 
-    with sherpas around everest, The locals beileved 
-    that chciken prepared this way seems to 
+    with Sherpas around Everest, The locals believed 
+    that chicken prepared this way seems to 
     have energizing powers. which is why its 
-    called <em>"spring chicken"</em> </p>
+    called <em>"Spring Chicken"</em> </p>
 
 <h2>Ingredients You'll need</h2>
     <ul>
