--- a/recipes/tacomac/tacomac.html
+++ b/recipes/tacomac/tacomac.html
@@ -8,5 +8,34 @@
 </head>
 <body>
     <h1>Recipe : Taco Mac</h1>
+<img src="../img/tm.jpeg" alt="Pic of Taco mac">
+
+<p> Taco mac is where comfort food transforms into a fiesta on your tongue. 
+    It involves, a personal favorite mac n' cheese with a 
+    Mexican twist.</p>
+
+<h2>What You'll Need</h2>
+    <ul>
+<li>1 lb of Ground Beef</li>
+<li>1/2 onion chopped</li>
+<li>Jalepeno Seeded and Sliced</li>
+<li> 2 Roma Tomaotoes Cubed</li>
+<li>Taco mix</li>
+<li> 1 tub of White Cheese Dip</li>
+<li>Cilantro</li>
+<li>1 pack of Sazon Goya</li>
+    </ul>
+<h2>How to Make it</h2>
+
+<ol>
+<li>Start by browning your beef in a skillet with your seasoning</li>
+<li>When the beef is almost cooked add in your vegetables</li>
+<li> After your beef/veggies are cooked through empty the cheese dip into the skillet and simmer on low heat</li>
+<li>while the the flavors of the mixture develop, begin boiling a pot of water large enough for your elbow noodles</li>
+<li>once the water begins boiling add your pasta and cook until <em>al dente</em> </li>
+<li>once your noodles are cooked add them to the skillet</li>
+<li> Stir and Serve </li>
+
+</ol>
 </body>
 </html>
