--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>OV Recipe Book</h1> 
   <p><a href="./recipes/tacomac/tacomac.html">Taco Mac</a></p>
    <p><a href="./recipes/springch/springchicken.html">Spring Chicken</a></p>
+   <p><a href="./recipes/cornsalsa/cornsalsa.html">Corn Salsa</a></p>
 </body>
 </html>
